--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "classnames": "^2.2.3",
     "events": "^1.1.0",
+    "gsap": "^1.20.3",
     "react": "^0.14.6",
     "react-dom": "^0.14.6"
   }
