--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babelify": "^7.2.0",
     "browserify": "^12.0.1",
     "del": "^2.2.0",
+    "envify": "^4.1.0",
     "glob": "^6.0.4",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
